# physically-implicit-modeling

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
notebooks/: dataset_viz.ipynb  gru_eval.ipynb  probe_combined.ipynb  viz_dataset_test.ipynb
notebooks/archive/: probe_linear.ipynb  probe_mlp.ipynb
notebooks/helpers/: nb_utils.py  nb_viz.py
pim/: __init__.py  config.py  dataset.py  edits_dataset.py  renderer.py  sim.py  viz.py
pim/models/: __init__.py  dataloader.py  gru.py
scripts/: demo.py  generate_dataset.py  generate_edits_dataset.py  train_gru.py
tests/: test_renderer.py  test_sim.py
