[tool.poetry]
name = "physically-implicit-modeling"
version = "0.1.0"
description = ""
authors = []
packages = [{ include = "pim" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.14.1 || >3.14.1,<3.15" # Prevent conflict from excluded torchvision & triton python versions
numpy = "^2.4.3"
matplotlib = "^3.10.8"
pillow = "^12.1.1"
h5py = "^3.16.0"
tqdm = "^4.67.3"
torch = "^2.11.0"
torchvision = "^0.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ruff = "^0.15.7"
black = {extras = ["jupyter"], version = "^26.3.1"}
ipykernel = "^7.2.0"
ipywidgets = "^8.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
# exclude = "notebooks/"

[tool.ruff]
line-length = 88
exclude = ["notebooks"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes — catches real bugs and import errors without style pedantry
select = ["E", "W", "F"]
ignore = [
    "E501",  # line too long (black handles this)
]
